--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-MySQLdb==0.2.0
 Flask-Session==0.3.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
